fixed gird system of new plugin "container-wrap"

--- a/css/components/navigation-bar.css
+++ b/css/components/navigation-bar.css
@@ -198,7 +198,7 @@
 }
 .navbar .nav > li > a {
   float: none;
-  padding: 9px 20px 11px;
+  padding: 9px 15px 11px;
   line-height: 29px;
   color: #999999;
   text-decoration: none;
