--- a/css/theme/theme.css
+++ b/css/theme/theme.css
@@ -12,7 +12,6 @@ body{
 }
 .featured-unit h1{
 	font-size:78px;
-	color:#222;
 }
 .featured-unit h2,
 .featured-unit h3{
